[package]
name = "aqua_gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
vulkano = "0.35"
vulkano-shaders = "0.35"
vulkano-util = "0.35"
vulkano-taskgraph = "0.35"

winit = {version = "0.30"}
egui_winit_vulkano = "0.28"

glam = {version = "0.28", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
rand = "0.9.1"
